@@ -174,6 +174,8 @@ Voop AS - Financial support for a lot of work with the SIP driver and the IAX
 Cedric Hans - Development of chan_unistim
   cedric.hans(AT)mlkj.net
 
+Takao Takahashi & Mina Naguib - chan_unistim improvements for smaller devices
+
 Sergio Fadda - console_video: video support for chan_oss and chan_alsa
 
 Marta Carbone - console_video and the astobj2 framework
